--- a/tools/api/pyproject.toml
+++ b/tools/api/pyproject.toml
@@ -13,7 +13,7 @@ requests = "^2.32.3"
 aws-requests-auth = "^0.4.3"
 boto3 = "^1.34.132"
 inquirer = "^3.2.5"
-colored = "^2.2.4"
+rich = "^13.7.1"
 
 
 [build-system]
